fix some layout issue

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -12,9 +12,9 @@
 	}
 	
 	.contents {
-		writing-mode: vertical-lr;
+		writing-mode: vertical-rl;
 		display: block;
-		padding: 1em;
+		padding: 8em;
 		height: 96vh;
 		margin: 10px auto;
 
@@ -66,7 +66,7 @@
 			-webkit-writing-mode: horizontal-tb;
       -ms-writing-mode: horizontal-tb;
 			margin: 0;
-			padding: 0;
+			padding: 120px 0 0 0;
 			height: 100vh;
 			
 			.title {
@@ -80,6 +80,9 @@
 				.bloglink {
 					font-size: 1.8rem;
 					padding: 0;
+					position: fixed;
+  				top: 20px;
+  				left: 30px; 
 				}
 			}
 	
